Add ability to schedule video publication
