# shared/models/videos/video-create.model.ts
@@ -1,4 +1,5 @@
 import { VideoPrivacy } from './video-privacy.enum'
+import { VideoScheduleUpdate } from './video-schedule-update.model'
 
 export interface VideoCreate {
   category?: number
@@ -13,8 +14,5 @@ export interface VideoCreate {
   tags?: string[]
   commentsEnabled?: boolean
   privacy: VideoPrivacy
-  scheduleUpdate?: {
-    updateAt: Date
-    privacy?: VideoPrivacy.PUBLIC | VideoPrivacy.UNLISTED
-  }
+  scheduleUpdate?: VideoScheduleUpdate
 }
