# support/doc/api/openapi.yaml
@@ -711,6 +711,12 @@ paths:
           type: string
           enum: [Public, Unlisted]
           description: 'Video privacy'
+        - name: scheduleUpdate
+          in: formData
+          required: false
+          description: 'Schedule an update at a specific datetime'
+          type:
+            $ref: '#/definitions/ScheduleVideoUpdate'
       responses:
         '200':
           description: successful operation
@@ -864,9 +870,15 @@ paths:
         - name: privacy
           in: formData
           required: true
-          type: string
-          enum: [Public, Unlisted, Private]
+          type:
+            $ref: '#/definitions/VideoPrivacy'
           description: 'Video privacy'
+        - name: scheduleUpdate
+          in: formData
+          required: false
+          description: 'Schedule an update at a specific datetime'
+          type:
+            $ref: '#/definitions/ScheduleVideoUpdate'
       responses:
         '200':
           description: successful operation
@@ -1709,3 +1721,12 @@ definitions:
         type: string
       description:
         type: string
+  ScheduleVideoUpdate:
+    properties:
+      updateAt:
+        type: dateTime
+        description: 'When to update the video'
+        required: true
+      privacy:
+        $ref: '#/definitions/VideoPrivacy'
+        required: false
